--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <!-- HTML Meta Tags -->
-  <title>Expressive Text-to-Image Generation with Rich Text</title>
-  <meta name="description" content="Expressive Text-to-Image Generation with Rich Text">
+  <title>Beyond First-Order Tweedie: Solving Inverse Problems using Latent Diffusion</title>
+  <meta name="description" content="Beyond First-Order Tweedie: Solving Inverse Problems using Latent Diffusion">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://rich-text-to-image.github.io/">
+  <meta property="og:url" content="https://stsl-inverse-edit.github.io/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Expressive Text-to-Image Generation with Rich Text">
-  <meta property="og:description" content="Expressive Text-to-Image Generation with Rich Text">
-  <meta property="og:image" content="https://rich-text-to-image.github.io/image_assets/preview.jpg">
+  <meta property="og:title" content="Second-order Tweedie from Surrogate Loss">
+  <meta property="og:description" content="Second-order Tweedie from Surrogate Loss">
+  <meta property="og:image" content="https://stsl-inverse-edit.github.io/image_assets/preview.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="rich-text-to-image.github.io">
-  <meta property="twitter:url" content="https://rich-text-to-image.github.io/">
-  <meta name="twitter:title" content="Expressive Text-to-Image Generation with Rich Text">
-  <meta name="twitter:description" content="Expressive Text-to-Image Generation with Rich Text">
-  <meta name="twitter:image" content="https://rich-text-to-image.github.io/image_assets/preview.jpg">
+  <meta property="twitter:domain" content="stsl-inverse-edit.github.io">
+  <meta property="twitter:url" content="https://stsl-inverse-edit.github.io/">
+  <meta name="twitter:title" content="Second-order Tweedie from Surrogate Loss">
+  <meta name="twitter:description" content="Second-order Tweedie from Surrogate Loss">
+  <meta name="twitter:image" content="https://stsl-inverse-edit.github.io/image_assets/preview.jpg">
 
 
   <!-- Google tag (gtag.js) -->
@@ -33,7 +33,7 @@
 
     gtag('config', 'G-9VZKE74FPW');
   </script>
-  <title>Expressive Text-to-Image Generation with Rich Text</title>
+  <title>Second-order Tweedie from Surrogate Loss</title>
 
   <link href="./assets/css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
@@ -66,7 +66,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-2 publication-title">Expressive Text-to-Image Generation with Rich Text</h1>
+            <h1 class="title is-2 publication-title">Second-order Tweedie from Surrogate Loss</h1>
             <!-- <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://songweige.github.io/">Songwei Ge</a><sup>&#128034;</sup>&nbsp</span>
@@ -122,7 +122,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://rich-text-to-image.github.io/assets/rich_text_to_image_generation.pdf"
+                  <a href="https://stsl-inverse-edit.github.io/assets/rich_text_to_image_generation.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <svg class="svg-inline--fa fa-file-pdf fa-w-12" aria-hidden="true" focusable="false"
@@ -145,7 +145,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://github.com/SongweiGe/rich-text-to-image"
+                  <a href="https://github.com/SongweiGe/stsl-inverse-edit"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <svg class="svg-inline--fa fa-github fa-w-16" aria-hidden="true" focusable="false"
@@ -169,7 +169,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://rich-text-to-image.github.io/#bibtex"
+                  <a href="https://stsl-inverse-edit.github.io/#bibtex"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-obp"></i>
@@ -194,7 +194,7 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container is-max-desktop has-text-centered">
-        <!-- <h2 class="title is-3">Rich-text-to-image Generation</h2> -->
+        <!-- <h2 class="title is-3">stsl-inverse-edit Generation</h2> -->
         <div class="has-text-justified">
           <p>
             We explore using versatile format information from rich text like font size, color, style, and
@@ -597,16 +597,16 @@
                   </p>
                   [1] Amir Hertz, Ron Mokady, Jay Tenenbaum, Kfir Aberman, Yael Pritch, and Daniel Cohen-Or. <a
                     href="https://arxiv.org/abs/2208.01626">Prompt-to-prompt image editing with cross attention
-                    control.</a> arXiv:2208.01626, 2022.<br>
-                  [2] Tim Brooks, Aleksander Holynski, and Alexei A Efros. <a
-                    href="https://arxiv.org/abs/2211.09800">Instructpix2pix: Learning to follow image editing
-                    instructions.</a> CVPR, 2023<br>
-                  [3] Hila Chefer, Yuval Alaluf, Yael Vinker, Lior Wolf, and Daniel Cohen-Or. <a
-                    href="https://arxiv.org/abs/2301.13826">Attend-and-excite: Attention-based semantic guidance for
-                    text-to-image diffusion models.</a>arXiv preprint arXiv:2301.13826, 2023.<br>
-                  [4] Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, and Björn Ommer. <a
-                    href="https://openaccess.thecvf.com/content/CVPR2022/html/Rombach_High-Resolution_Image_Synthesis_With_Latent_Diffusion_Models_CVPR_2022_paper.html6">High-resolution
-                    image synthesis with latent diffusion models.</a>CVPR, 2022<br>
+                    control.</a>ICLR, 2023.<br>
+                  [2] Mokady, Ron, Amir Hertz, Kfir Aberman, Yael Pritch, and Daniel Cohen-Or. <a
+                    href="https://arxiv.org/abs/2211.09794">Null-text Inversion for Editing Real Images using Guided Diffusion Models.
+                  </a>CVPR, 2023<br>
+                  [3] Rout, Litu, Negin Raoof, Giannis Daras, Constantine Caramanis, Alex Dimakis, and Sanjay Shakkottai. <a
+                    href="https://openreview.net/forum?id=XKBFdYwfRo">Solving Linear Inverse Problems Provably via Posterior Sampling with Latent Diffusion Models.
+                  </a>NeurIPS, 2023.<br>
+                  [4] Chung, Hyungjin, Jong Chul Ye, Peyman Milanfar, and Mauricio Delbracio. <a
+                    href="https://arxiv.org/abs/2310.01110">Prompt-tuning latent diffusion models for inverse problems
+                  </a>ArXiv, 2023<br>
                   <p></p>
                 </div>
                 <!-- Prompt Interpolation image -->
@@ -638,9 +638,9 @@
     <div class="container is-max-desktop content">
       <h2 class="title"><a id="bibtex">BibTeX</a></h2>
       <pre><code>@inproceedings{ge2023expressive,
-      title={Expressive Text-to-Image Generation with Rich Text},
-      author={Ge, Songwei and Park, Taesung and Zhu, Jun-Yan and Huang, Jia-Bin},
-      booktitle={IEEE International Conference on Computer Vision (ICCV)},
+      title={Beyond First-order Tweedie: Solving Inverse Problems using Latent Diffusion},
+      author={Rout, Litu and Chen, Yujia and Kumar, Abhishek and Caramanis, Constantine and Shakkottai, Sanjay and Chu, Wen-Sheng},
+      booktitle={ArXiv},
       year={2023}
 }</code></pre>
     </div>
