--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-2 publication-title">Second-order Tweedie from Surrogate Loss</h1>
+            <h1 class="title is-2 publication-title">Beyond First-Order Tweedie: Solving Inverse Problems using Latent Diffusion</h1>
             <!-- <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://songweige.github.io/">Songwei Ge</a><sup>&#128034;</sup>&nbsp</span>
@@ -92,30 +92,32 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://songweige.github.io/">Songwei
-                  Ge</a><sup>1</sup>&nbsp</span>
+                <a href="https://liturout.github.io/">Litu Rout</a><sup>1,2</sup>&nbsp</span>
               <span class="author-block">
-                <a href="https://taesung.me/">Taesung Park</a><sup>2</sup>&nbsp
+                <a href="">Yujia Chen</a><sup>2</sup>&nbsp
               </span>
               <span class="author-block">
-                <a href="https://www.cs.cmu.edu/~junyanz/">Jun-Yan
-                  Zhu</a><sup>3</sup>&nbsp</span>
+                <a href="">Abhishek Kumar</a><sup>3</sup>&nbsp</span>
               <span class="author-block">
-                <a href="https://jbhuang0604.github.io/">Jia-Bin
-                  Huang</a><sup>1</sup>&nbsp
+                <a href="">Constantine Caramanis</a><sup>1</sup>&nbsp
+              </span>
+              <span class="author-block">
+                <a href="">Sanjay Shakkottai</a><sup>1</sup>&nbsp
+              </span>
+              <span class="author-block">
+                <a href="">Wen-Sheng Chu</a><sup>2</sup>&nbsp
               </span>
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>University of Maryland, College Park
+              <span class="author-block"><sup>1</sup>University of Texas, Austin
                 &nbsp</span>
-              <span class="author-block"><sup>2</sup>Adobe Research &nbsp</span>
-              <span class="author-block"><sup>3</sup>Carnegie
-                Mellon University</span>
+              <span class="author-block"><sup>2</sup>Google Research Research &nbsp</span>
+              <span class="author-block"><sup>3</sup>Google DeepMind</span>
             </div>
 
             <div class="is-size-5 publication-venue">
-              ICCV 2023
+              ArXiv 2023
             </div>
 
             <div class="column has-text-centered">
@@ -145,7 +147,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://github.com/SongweiGe/stsl-inverse-edit"
+                  <a href="https://github.com/LituRout/stsl-inverse-edit"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <svg class="svg-inline--fa fa-github fa-w-16" aria-hidden="true" focusable="false"
@@ -160,7 +162,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://huggingface.co/spaces/songweig/rich-text-to-image"
+                  <a href="https://huggingface.co/spaces/liturout/rich-text-to-image"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-edit"></i>
