--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>University of Texas, Austin
                 &nbsp</span>
-              <span class="author-block"><sup>2</sup>Google Research Research &nbsp</span>
+              <span class="author-block"><sup>2</sup>Google Research &nbsp</span>
               <span class="author-block"><sup>3</sup>Google DeepMind</span>
             </div>
 
             <div class="is-size-5 publication-venue">
-              ArXiv 2023
+              Work in progress
             </div>
 
             <div class="column has-text-centered">
