--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/pizza_plain.png" alt="" data-label="Plain-text">
+                      <img src="./image_assets/teaser/00223_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/pizza_rich.png" alt="" data-label="Rich-text">
+                        src="./image_assets/teaser/00223_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
