--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;"><img
-                        src="./image_assets/teaser/sea_plain.png" alt="" data-label="Plain-text">
+                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Plain-text">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/sea_rich.png" alt="" data-label="Rich-text">
+                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Rich-text">
                     </div>
                   </div>
                 </div>
@@ -283,10 +283,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/church_plain.png" alt="" data-label="Plain-text">
+                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Plain-text">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/church_rich.png" alt="" data-label="Rich-text">
+                        src="./image_assets/teaser/00965_ip.png" alt="" data-label="Rich-text">
                     </div>
                   </div>
                 </div>
@@ -621,10 +621,8 @@
                 <h2 class="title is-3 has-text-centered">Acknowledgment</h2>
                 <div class="content has-text-justified">
                   <p>
-                    We thank Mia Tang, Aaron Hertzmann, Nupur Kumari, Gaurav Parmar, Ruihan Gao, and Aniruddha Mahapatra
-                    for their helpful discussion, code reviewing, and paper reading. We thank AK, Radamés Ajna, and
-                    other HuggingFace team members for their help and support with our online demo. This work is partly
-                    supported by NSF award no. 239076, NSF grants no. IIS-1910132 and IIS-2213335.
+                    This research has been partially supported by NSF Grant 2019844, Google Research, and the UT Austin Machine Learning Lab (MLL).
+                    Litu Rout has been supported by the Ju-Nam and Pearl Chew Endowed Presidential Fellowship in Engineering and the George J. Heuer, Jr. Ph.D. Endowed Graduate Fellowship.
                   </p>
                 </div>
               </div>
