--- a/index.html
+++ b/index.html
@@ -199,13 +199,19 @@
         <!-- <h2 class="title is-3">stsl-inverse-edit Generation</h2> -->
         <div class="has-text-justified">
           <p>
-            We explore using versatile format information from rich text like font size, color, style, and
-            footnote for text-to-image generation. Our framework enables intuitive local style control,
-            precise color generation, and supplementary description for long prompts.
+            We present qualitative results of the proposed inverse problem solver STSL in motion deblurring, super-resolutoin (8X),
+            , Gaussian deblurring, and Free-form inpainting. Notably, STSL demonstrates superior capability in preserving intricate image
+            details and reducing artifacts in the reconstructed images. 
           </p>
           <br>
         </div>
-        <!-- row 1 -->
+        <!-- Motion Deblur row 1 -->
+        <div class="has-text-justified">
+          <p>
+            Qualitative results on motion deblurring
+          </p>
+        </div>
+      </div>
         <div class="columns is-centered">
           <div class="column">
             <div class="content">
@@ -230,12 +236,6 @@
                 </div>
               </div>
             </div>
-            <div class="has-text-justified">
-              <p>
-                <span style="font-family:roboto;">"A pizza with mushrooms, pepperonis, and
-                  <span style="font-size: 1.6em;">pineapples</span> on the top, 4k, photorealism."</span>
-              </p>
-            </div>
           </div>
           <div class="column">
             <div class="content">
@@ -251,22 +251,14 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;"><img
-                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Plain-text">
+                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Rich-text">
+                        src="./image_assets/teaser/00630_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="has-text-justified">
-              <p>
-                <span style="font-family:roboto;">"A <span style="font-family:sofia;">night sky filled with stars</span> above <span style="font-family:Inconsolata;">a turbulent sea</span> with giant waves."</span>
-              </p>
-              <p>
-                <span style="font-family:roboto;">Styles: <span style="font-family:sofia;">Van Gogh</span>, <span style="font-family:Inconsolata;">Ukiyo-e</span></span>
-              </p>
             </div>
           </div>
           <div class="column">
@@ -283,20 +275,257 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Plain-text">
+                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00965_ip.png" alt="" data-label="Rich-text">
+                        src="./image_assets/teaser/00965_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="has-text-justified">
-              <p>
-                <span style="font-family:roboto;">"A Gothic <span style="color:rgb(246, 128, 170);">church</span> in the sunset with a beautiful landscape in the background.
-                  "</span>
-              </p>
+          </div>
+        </div>
+        <!-- Super-resolution (8X) row 2 -->
+        <div class="has-text-justified">
+          <p>
+            Qualitative results on super-resolution (8X)
+          </p>
+        </div>
+      </div>
+        <div class="columns is-centered">
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;">
+                      <img src="./image_assets/teaser/00223_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00223_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed2" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;"><img
+                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00630_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;">
+                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00965_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Gaussian Deblur row 3 -->
+        <div class="has-text-justified">
+          <p>
+            Qualitative results on gaussian deblurring
+          </p>
+        </div>
+      </div>
+        <div class="columns is-centered">
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;">
+                      <img src="./image_assets/teaser/00223_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00223_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed2" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;"><img
+                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00630_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;">
+                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00965_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Free-form inpainting row 4 -->
+        <div class="has-text-justified">
+          <p>
+            Qualitative results on free-form inpainting
+          </p>
+        </div>
+      </div>
+        <div class="columns is-centered">
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;">
+                      <img src="./image_assets/teaser/00223_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00223_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed2" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;"><img
+                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00630_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="content">
+              <div class="tab_container">
+                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                  <div class="jx-slider">
+                    <div class="jx-handle " style="left: 54.53%;">
+                      <div class="jx-arrow jx-left"></div>
+                      <div class="jx-control">
+                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                          aria-valuemax="100"></div>
+                      </div>
+                      <div class="jx-arrow jx-right"></div>
+                    </div>
+                    <div class="jx-image jx-left " style="width: 54.53%;">
+                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Input">
+                    </div>
+                    <div class="jx-image jx-right " style="width: 45.47%;"><img
+                        src="./image_assets/teaser/00965_op.png" alt="" data-label="Output">
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
