--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="is-size-5 publication-venue">
-              Work in progress
+              Website in progress
             </div>
 
             <div class="column has-text-centered">
@@ -206,13 +206,13 @@
           <br>
         </div>
         <!-- Motion Deblur row 1 -->
-        <div class="has-text-justified">
-          <p>
-            Qualitative results on motion deblurring
-          </p>
-        </div>
       </div>
         <div class="columns is-centered">
+          <div class="has-text-justified">
+            <p>
+              Qualitative results on motion deblurring
+            </p>
+          </div>
           <div class="column">
             <div class="content">
               <div class="tab_container">
