--- a/index.html
+++ b/index.html
@@ -206,14 +206,15 @@
           <br>
         </div>
         <!-- Motion Deblur row 1 -->
+        <div class="has-text-justified">
+          <p>
+            <strong>Qualitative results on motion deblurring</strong>
+          </p>
+          <br>
+        </div>
       </div>
         <div class="columns is-centered">
           <div class="column">
-            <div class="has-text-justified">
-              <p>
-                Qualitative results on motion deblurring
-              </p>
-            </div>
             <div class="content">
               <div class="tab_container">
                 <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
