--- a/index.html
+++ b/index.html
@@ -286,14 +286,13 @@
             </div>
           </div>
         </div>
-      </div>
-        <!-- Super-resolution (8X) row 2 -->
+        <!-- Super-Resolution row 2 -->
         <div class="has-text-justified">
           <p>
-            Qualitative results on super-resolution (8X)
+            <strong>Qualitative results on super-resolution (8X)</strong>
           </p>
+          <br>
         </div>
-      </div>
         <div class="columns is-centered">
           <div class="column">
             <div class="content">
@@ -357,10 +356,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/SRX8/00883_ip.png" alt="" data-label="Input">
+                      <img src="./image_assets/teaser/SRX8/00849_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/SRX8/00883_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/SRX8/00849_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -371,10 +370,10 @@
         <!-- Gaussian Deblur row 3 -->
         <div class="has-text-justified">
           <p>
-            Qualitative results on gaussian deblurring
+            <strong>Qualitative results on Gaussian deblurring</strong>
           </p>
+          <br>
         </div>
-      </div>
         <div class="columns is-centered">
           <div class="column">
             <div class="content">
@@ -390,10 +389,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/00223_ip.png" alt="" data-label="Input">
+                      <img src="./image_assets/teaser/MB/00223_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00223_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/MB/00223_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -414,10 +413,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;"><img
-                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Input">
+                        src="./image_assets/teaser/MB/00630_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00630_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/MB/00630_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -438,10 +437,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Input">
+                      <img src="./image_assets/teaser/MB/00965_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00965_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/MB/00965_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -449,13 +448,13 @@
             </div>
           </div>
         </div>
-        <!-- Free-form inpainting row 4 -->
+        <!-- Free-form Inpainting row 4 -->
         <div class="has-text-justified">
           <p>
-            Qualitative results on free-form inpainting
+            <strong>Qualitative results on Free-from Inpainting</strong>
           </p>
+          <br>
         </div>
-      </div>
         <div class="columns is-centered">
           <div class="column">
             <div class="content">
@@ -471,10 +470,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/00223_ip.png" alt="" data-label="Input">
+                      <img src="./image_assets/teaser/MB/00223_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00223_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/MB/00223_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -495,10 +494,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;"><img
-                        src="./image_assets/teaser/00630_ip.png" alt="" data-label="Input">
+                        src="./image_assets/teaser/MB/00630_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00630_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/MB/00630_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -519,10 +518,10 @@
                       <div class="jx-arrow jx-right"></div>
                     </div>
                     <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/00965_ip.png" alt="" data-label="Input">
+                      <img src="./image_assets/teaser/MB/00965_ip.png" alt="" data-label="Input">
                     </div>
                     <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/00965_op.png" alt="" data-label="Output">
+                        src="./image_assets/teaser/MB/00965_op.png" alt="" data-label="Output">
                     </div>
                   </div>
                 </div>
@@ -530,6 +529,7 @@
             </div>
           </div>
         </div>
+      </div>
         <!-- row 2 -->
         <div class="columns is-centered">
           <div class="column">
