--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
             </div>
           </div>
         </div>
-        <div class="has-text-justified">
+        <!-- <div class="has-text-justified"> -->
           <!-- <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%">
             <source src="./video_assets/workflow_demo.mp4" type="video/mp4">
           </video> -->
-          <iframe width="960" height="540" src="https://www.youtube.com/embed/ihDbAUh0LXk?si=ASIzJd_Q2Tq1pwjq" 
-          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
+          <!-- <iframe width="960" height="540" src="https://www.youtube.com/embed/ihDbAUh0LXk?si=ASIzJd_Q2Tq1pwjq" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+        <!-- </div> -->
       </div>
     </div>
   </section>
@@ -851,7 +851,7 @@
                 <h2 class="title is-3 has-text-centered">Acknowledgment</h2>
                 <div class="content has-text-justified">
                   <p>
-                    This research has been partially supported by NSF Grant 2019844, Google Research, and the UT Austin Machine Learning Lab (MLL).
+                    This research has been partially supported by NSF Grant 2019844, and the UT Austin Machine Learning Lab (MLL).
                     Litu Rout has been supported by the Ju-Nam and Pearl Chew Endowed Presidential Fellowship in Engineering and the George J. Heuer, Jr. Ph.D. Endowed Graduate Fellowship.
                   </p>
                 </div>
