--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container is-max-desktop has-text-centered">
-        <!-- <h2 class="title is-3">stsl-inverse-edit Generation</h2> -->
+        <h2 class="title is-3">STSL Image Inversion</h2>
         <div class="has-text-justified">
           <p>
             We present qualitative results of the proposed inverse problem solver STSL in motion deblurring, super-resolutoin (8X),
