--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container is-max-desktop has-text-centered">
-        <h2 class="title is-3">STSL Image Inversion</h2>
+        <h2 class="title is-4">STSL Image Inversion</h2>
         <div class="has-text-justified">
           <p>
-            We present qualitative results of the proposed inverse problem solver STSL in motion deblurring, super-resolutoin (8X),
-            , Gaussian deblurring, and Free-form inpainting. Notably, STSL demonstrates superior capability in preserving intricate image
+            We present qualitative results of the proposed inverse problem solver STSL in motion deblurring, super-resolutoin (8X), 
+            Gaussian deblurring, and Free-form inpainting. Notably, STSL demonstrates superior capability in preserving intricate image
             details and reducing artifacts in the reconstructed images. 
           </p>
           <br>
