--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
   <section class="hero is-light is-small">
     <div class="hero-body">
       <div class="container is-max-desktop has-text-centered">
-        <h2 class="title is-4">STSL Image Inversion</h2>
+        <h2 class="title is-4">STSL for Image Inversion</h2>
         <div class="has-text-justified">
           <p>
-            We present qualitative results of the proposed inverse problem solver STSL in motion deblurring, super-resolutoin (8X), 
-            Gaussian deblurring, and Free-form inpainting. Notably, STSL demonstrates superior capability in preserving intricate image
-            details and reducing artifacts in the reconstructed images. 
+            We present an efficient second-order approximation using Tweedie's formula to mitigate the bias incurred in the
+            widely used first-order samplers. With this method, we
+            devise a surrogate loss function to refine the reverse process at every diffusion step to address inverse problems.
           </p>
           <br>
         </div>
@@ -532,6 +532,113 @@
           </div>
         </div>
       </div>
+       <!-- Row 2 for image editing -->
+       <section class="hero is-light is-small">
+        <div class="hero-body">
+          <div class="container is-max-desktop has-text-centered">
+            <h2 class="title is-4">STSL for Image Editing</h2>
+            <div class="has-text-justified">
+              <p>
+                We introduce a new framework for high-fidelity image
+                editing in real-world environments with corruptions. To
+                the best of our knowledge, this is the first framework that
+                can handle corruptions in image editing pipelines.
+              </p>
+              <br>
+            </div>
+            <!-- Motion Deblur col 1 -->
+            <div class="columns is-centered">
+              <div class="column">
+                <div class="content">
+                  <div class="tab_container">
+                    <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                      <div class="jx-slider">
+                        <div class="jx-handle " style="left: 54.53%;">
+                          <div class="jx-arrow jx-left"></div>
+                          <div class="jx-control">
+                            <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <div class="jx-arrow jx-right"></div>
+                        </div>
+                        <div class="jx-image jx-left " style="width: 54.53%;">
+                          <img src="./image_assets/teaser/MB/00223_ip.png" alt="" data-label="Input">
+                        </div>
+                        <div class="jx-image jx-right " style="width: 45.47%;"><img
+                            src="./image_assets/teaser/MB/00223_op.png" alt="" data-label="Output">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="has-text-justified">
+                <p>
+                  <strong>Motion Blur</strong>
+                </p>
+              </div>
+              <!-- Super-resolution col 2 -->
+              <div class="column">
+                <div class="content">
+                  <div class="tab_container">
+                    <div id="juxtapose-embed2" data-startingposition="30%" data-animate="true" class="juxtapose">
+                      <div class="jx-slider">
+                        <div class="jx-handle " style="left: 54.53%;">
+                          <div class="jx-arrow jx-left"></div>
+                          <div class="jx-control">
+                            <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <div class="jx-arrow jx-right"></div>
+                        </div>
+                        <div class="jx-image jx-left " style="width: 54.53%;"><img
+                            src="./image_assets/teaser/MB/00630_ip.png" alt="" data-label="Input">
+                        </div>
+                        <div class="jx-image jx-right " style="width: 45.47%;"><img
+                            src="./image_assets/teaser/MB/00630_op.png" alt="" data-label="Output">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="has-text-justified">
+                <p>
+                  <strong>Super-resolution (8X)</strong>
+                </p>
+              </div>
+              <!-- Gaussian Deblur col 3 -->
+              <div class="column">
+                <div class="content">
+                  <div class="tab_container">
+                    <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                      <div class="jx-slider">
+                        <div class="jx-handle " style="left: 54.53%;">
+                          <div class="jx-arrow jx-left"></div>
+                          <div class="jx-control">
+                            <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <div class="jx-arrow jx-right"></div>
+                        </div>
+                        <div class="jx-image jx-left " style="width: 54.53%;">
+                          <img src="./image_assets/teaser/MB/00965_ip.png" alt="" data-label="Input">
+                        </div>
+                        <div class="jx-image jx-right " style="width: 45.47%;"><img
+                            src="./image_assets/teaser/MB/00965_op.png" alt="" data-label="Output">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="has-text-justified">
+                <p>
+                  <strong>Gaussian Blur</strong>
+                </p>
+              </div>
+            </div>
+        </div>    
         <!-- row 2 -->
         <div class="columns is-centered">
           <div class="column">
