--- a/index.html
+++ b/index.html
@@ -547,6 +547,15 @@
               <br>
             </div>
             <!-- Motion Deblur col 1 -->
+            <div class="has-text-justified">
+              <p>
+                Text-guided image editing from corrupted image:
+                "a high quality photo of a tiger face"
+                <span>&#8594;</span>
+                "a high quality photo of a <strong>tiger</strong> face"
+              </p>
+              <br>
+            </div>
             <div class="columns is-centered">
               <div class="column">
                 <div class="content">
