center edit label

--- a/index.html
+++ b/index.html
@@ -549,10 +549,12 @@
             <!-- Motion Deblur col 1 -->
             <div class="has-text-justified">
               <p>
+                <font color="blur"> 
                 Text-guided image editing from corrupted image:
                 "a high quality photo of a tiger face"
                 <span>&#8594;</span>
-                "a high quality photo of a <strong>tiger</strong> face"
+                "a high quality photo of a <strong>leopard</strong> face"
+                </font>
               </p>
               <br>
             </div>
@@ -580,7 +582,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="has-text-justified">
+                <div class="has-text-centered">
                   <p>
                     <strong>Motion Blur</strong>
                   </p>
@@ -610,7 +612,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="has-text-justified">
+                <div class="has-text-centered">
                   <p>
                     <strong>Super-resolution (8X)</strong>
                   </p>
@@ -640,7 +642,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="has-text-justified">
+                <div class="has-text-centered">
                   <p>
                     <strong>Gaussian Blur</strong>
                   </p>
