--- a/index.html
+++ b/index.html
@@ -548,9 +548,11 @@
             </div>
             <!-- Motion Deblur col 1 -->
             <div class="has-text-justified">
-              <p>
-                <font color="blur"> 
-                Text-guided image editing from corrupted image:
+              <p>                
+                <strong> 
+                  image editing from corrupted image:
+                </strong>
+                <font color="blue"> 
                 "a high quality photo of a tiger face"
                 <span>&#8594;</span>
                 "a high quality photo of a <strong>leopard</strong> face"
