--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
   </section>
 
   <!-- Method & Workflow -->
-  <section class="hero is-light">
+  <!-- <section class="hero is-light">
     <div class="hero-body">
       <div class="container is-max-desktop has-text-centered">
         <h2 class="title is-3">Rich-text-to-image Generation Framework</h2>
@@ -924,7 +924,7 @@
             are applied as denoising prompt or guidance on the regions indicated by the token maps.
             We preserve the structure and background from plain-text generation by injecting the features or blending the noised samples.<br>
           </p>
-        </div>
+        </div> -->
         <!-- <hr>
         <h2 class="title is-3">Example Workflow with our Framework</h2>
         <div class="has-text-justified">
@@ -933,9 +933,9 @@
           </video>
         </div>
         Our framework can naturally be integrated into a rich text editor, enabling a tight, streamlined UI. -->
-      </div>
+      <!-- </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Method & Workflow -->
 
   <section class="section">
