--- a/index.html
+++ b/index.html
@@ -652,6 +652,14 @@
                 </div>
               </div>
               </div>
+              <div class="content has-text-justified">
+                <h4>
+                  Comparison with existing methods:
+                </h4>
+              </div>
+              <div class="content has-text-centered">
+                <img src="./image_assets/font_color.jpg" width="150%">
+              </div>
         </div>        
       </div>
     </div>
