compare tig2leo

--- a/index.html
+++ b/index.html
@@ -548,11 +548,13 @@
               <br>
             </div>
             <!-- Motion Deblur col 1 -->
-            <div class="has-text-justified">
-              <p>                
-                <strong> 
-                  Image editing from corrupted image:
-                </strong>
+            <div class="content has-text-justified">
+              <h4>
+                Image editing from corrupted image:
+              </h4>
+            </div>
+            <div class="has-text-centered">          
+              <p>                                
                 <font color="blue"> 
                 "a high quality photo of a tiger face"
                 <span>&#8594;</span>
@@ -658,7 +660,7 @@
                 </h4>
               </div>
               <div class="content has-text-centered">
-                <img src="./image_assets/font_color.jpg" width="150%">
+                <img src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.pdf" width="150%">
               </div>
         </div>        
       </div>
