--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 </h4>
               </div>
               <div class="content has-text-centered">
-                <img src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.pdf" width="150%">
+                <img src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.png" width="150%">
               </div>
         </div>        
       </div>
