add tig2leo pdf

--- a/index.html
+++ b/index.html
@@ -659,8 +659,11 @@
                   Comparison with existing methods:
                 </h4>
               </div>
-              <div class="content has-text-centered">
-                <img src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.png" width="150%">
+              <div class="content has-text-centered">                
+                <iframe
+                  src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.pdf"
+                  width="150%"
+                ></iframe>
               </div>
         </div>        
       </div>
