--- a/index.html
+++ b/index.html
@@ -659,10 +659,11 @@
                   Comparison with existing methods:
                 </h4>
               </div>
-              <div class="content has-text-centered">                
+              <div class="content has-text-centered">
                 <iframe
-                  src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.pdf"
-                  width="150%"
+                    src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.pdf"
+                    width="150%"
+                    height="600px"
                 ></iframe>
               </div>
         </div>        
