revert font_color.jpg

--- a/index.html
+++ b/index.html
@@ -660,11 +660,7 @@
                 </h4>
               </div>
               <div class="content has-text-centered">
-                <iframe
-                    src="./image_assets/teaser/Edit/supp_edit_corrupted_tiger_low.pdf"
-                    width="150%"
-                    height="600px"
-                ></iframe>
+                <img src="./image_assets/font_color.jpg" width="150%">
               </div>
         </div>        
       </div>
