--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@
           <br>
         </div>
         <!-- Motion Deblur row 1 -->
-        <div class="has-text-justified">
-          <p>
-            <strong>Qualitative results on motion deblurring</strong>
-          </p>
-          <br>
+        <div class="content has-text-justified">
+          <h4>
+            Qualitative results on Motion Deblurring:
+          </h4>
         </div>
         <div class="columns is-centered">
           <div class="column">
@@ -289,11 +288,10 @@
           </div>
         </div>
         <!-- Super-Resolution row 2 -->
-        <div class="has-text-justified">
-          <p>
-            <strong>Qualitative results on super-resolution (8X)</strong>
-          </p>
-          <br>
+        <div class="content has-text-justified">
+          <h4>
+            Qualitative results on Super-Resolution (8X):
+          </h4>
         </div>
         <div class="columns is-centered">
           <div class="column">
@@ -370,11 +368,10 @@
           </div>
         </div>
         <!-- Gaussian Deblur row 3 -->
-        <div class="has-text-justified">
-          <p>
-            <strong>Qualitative results on Gaussian deblurring</strong>
-          </p>
-          <br>
+        <div class="content has-text-justified">
+          <h4>
+            Qualitative results on Gaussian Deblurring:
+          </h4>
         </div>
         <div class="columns is-centered">
           <div class="column">
@@ -450,12 +447,11 @@
             </div>
           </div>
         </div>
-        <!-- Free-form Inpainting row 4 -->
-        <div class="has-text-justified">
-          <p>
-            <strong>Qualitative results on Free-from Inpainting</strong>
-          </p>
-          <br>
+        <!-- Free-form Inpainting row 4 -->        
+        <div class="content has-text-justified">
+          <h4>
+            Qualitative results on Free-from Inpainting:
+          </h4>
         </div>
         <div class="columns is-centered">
           <div class="column">
