--- a/index.html
+++ b/index.html
@@ -895,12 +895,16 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title"><a id="bibtex">BibTeX</a></h2>
-      <pre><code>@inproceedings{ge2023expressive,
+      
+      <pre><code>
+      <font size="-1">
+      @article{rout2023beyond,
       title={Beyond First-order Tweedie: Solving Inverse Problems using Latent Diffusion},
       author={Rout, Litu and Chen, Yujia and Kumar, Abhishek and Caramanis, Constantine and Shakkottai, Sanjay and Chu, Wen-Sheng},
       booktitle={ArXiv},
       year={2023}
-}</code></pre>
+    </font>
+    }</code></pre>
     </div>
   </section>
 
