--- a/index.html
+++ b/index.html
@@ -892,21 +892,17 @@
       </div>
     </div>
   </section>
-  <section class="section" id="BibTeX">
+  <!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title"><a id="bibtex">BibTeX</a></h2>
-      
-      <pre><code>
-      <font size="-1">
-      @article{rout2023beyond,
+      <pre><code>@article{rout2023beyond,
       title={Beyond First-order Tweedie: Solving Inverse Problems using Latent Diffusion},
       author={Rout, Litu and Chen, Yujia and Kumar, Abhishek and Caramanis, Constantine and Shakkottai, Sanjay and Chu, Wen-Sheng},
       booktitle={ArXiv},
       year={2023}
-    </font>
-    }</code></pre>
+}</code></pre>
     </div>
-  </section>
+  </section> -->
 
 
   <footer class="footer">
