--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                   </p>
                 </div>
               </div>
-              <!-- Super-resolution col 2 -->
+              <!-- Super-Resolution col 2 -->
               <div class="column">
                 <div class="content">
                   <div class="tab_container">
@@ -615,7 +615,7 @@
                 </div>
                 <div class="has-text-centered">
                   <p>
-                    <strong>Super-resolution (8X)</strong>
+                    <strong>Super-Resolution (8X)</strong>
                   </p>
                 </div>
               </div>              
@@ -879,7 +879,7 @@
                 <h2 class="title is-3 has-text-centered">Acknowledgment</h2>
                 <div class="content has-text-justified">
                   <p>
-                    This research has been partially supported by NSF Grant 2019844, and the UT Austin Machine Learning Lab (MLL).
+                    This research has been partially supported by NSF Grant 2019844 and the UT Austin Machine Learning Lab (MLL).
                     Litu Rout has been supported by the Ju-Nam and Pearl Chew Endowed Presidential Fellowship in Engineering and the George J. Heuer, Jr. Ph.D. Endowed Graduate Fellowship.
                   </p>
                 </div>
