--- a/index.html
+++ b/index.html
@@ -553,9 +553,9 @@
             <div class="has-text-centered">          
               <p>                                
                 <font color="blue"> 
-                "a high quality photo of a tiger face"
+                "a high quality photo of the face of a tiger"
                 <span>&#8594;</span>
-                "a high quality photo of a <strong>leopard</strong> face"
+                "a high quality photo of the face of a <strong>leopard</strong> "
                 </font>
               </p>
               <br>
@@ -669,9 +669,9 @@
             <div class="has-text-centered">          
               <p>                                
                 <font color="blue"> 
-                "a high quality photo of a cat face"
+                "a high quality photo of the face of a cat"
                 <span>&#8594;</span>
-                "a high quality photo of a <strong>fox</strong> face"
+                "a high quality photo of the face of a <strong>fox</strong> "
                 </font>
               </p>
               <br>
