--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                 <h2 class="title is-3 has-text-centered">Acknowledgment</h2>
                 <div class="content has-text-justified">
                   <p>
-                    This research has been partially supported by NSF Grant 2019844 and the UT Austin Machine Learning Lab (MLL).
+                    This research has been partially supported by NSF Grant 2019844, Google Research, and the UT Austin Machine Learning Lab (MLL).
                     Litu Rout has been supported by the Ju-Nam and Pearl Chew Endowed Presidential Fellowship in Engineering and the George J. Heuer, Jr. Ph.D. Endowed Graduate Fellowship.
                   </p>
                 </div>
