add exp eval edit

--- a/index.html
+++ b/index.html
@@ -847,31 +847,31 @@
       </div>
       <div class="content has-text-justified">
         <h4>
-          Comparison with existing methods:
+          Comparison with existing methods in image editing:
         </h4>
       </div>
       <ul class="nav nav-pills nav-justified" id="prompt-view-ul" style="width: 100%;margin-bottom: 0.5em;">
         <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);"
-            onclick="ChangePrompt(0);">Inversion</a>
+            onclick="ChangePrompt(0);">Tiger</a>
         </li>
-        <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePrompt(1);">Editing</a>
+        <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangePrompt(1);">Cat</a>
         </li>
       </ul>
       <ul class="nav nav-pills nav-justified" id="method-view-ul" style="width: 100%">
         <li style="font-size: 0.9em;" class="active"><a href="javascript: void(0);" onclick="ChangeMethod(0);">Ours</a>
         </li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(1);">
-            LDIR [5]</a></li>
+            GT </a></li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(2);">
-            LDPS [3]</a></li>
+            Input</a></li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);"
             onclick="ChangeMethod(3);">
-            PSLD [3]</a></li>
+            NTI [2]</a></li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(4);">InstructPix2Pix
-            P2L [4]</a></li>
+            Commercial</a></li>
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);"
             onclick="ChangeMethod(5);">
-            Input [1]</a></li>
+            Ours</a></li>
       </ul>
       <div class="columns is-centered" id="div_cityscape" style="display: none;">
         <div class="column">
