add exp eval edit

--- a/index.html
+++ b/index.html
@@ -877,18 +877,12 @@
         <div class="column">
           <div class="has-text-justified">
             <p>
-              <span style="font-size:1.25em;">A car<sup><span style="color:red">1</span></sup> driving on the
-                road. A bicycle<sup><span style="color:rgb(36, 192, 240)">2</span></sup> nearby a tree<sup><span
-                    style="color:green">3</span></sup>. A cityscape<sup><span
-                    style="color:rgb(238, 238, 62)">4</span></sup> in the background.<br><br></span>
-              <span style="font-size:1.1em;"><sup><span style="color:red">1</span></sup>A sleek sports car gleams on the
-                road in the sunlight, with its aerodynamic curves and polished finish catching the light.</span><br>
-              <span style="font-size:1.1em;"><sup><span style="color:rgb(36, 192, 240)">2</span></sup>A bicycle with
-                rusted frame and worn tires.</span><br>
-              <span style="font-size:1.1em;"><sup><span style="color:green">3</span></sup>A dead tree with a few red
-                apples on it.</span><br>
-              <span style="font-size:1.1em;"><sup><span style="color:rgb(238, 238, 62)">4</span></sup>A bustling
-                Hongkong cityscape with towering skyscrapers.</span>
+              <span style="font-size:1.25em;">a high quality photo of the face of a tiger<sup><span
+                    style="color:green">1</span></sup>
+                    <br><br>
+              </span>              
+              <span style="font-size:1.1em;"><sup><span style="color:green">1</span></sup>
+                leopard</span>
             </p>
           </div>
         </div>
