add exp eval edit

--- a/index.html
+++ b/index.html
@@ -867,11 +867,8 @@
         <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);"
             onclick="ChangeMethod(3);">
             NTI [2]</a></li>
-        <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(4);">InstructPix2Pix
+        <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);" onclick="ChangeMethod(4);">
             Commercial</a></li>
-        <li style="font-size: 0.9em;" class=""><a href="javascript: void(0);"
-            onclick="ChangeMethod(5);">
-            Ours</a></li>
       </ul>
       <div class="columns is-centered" id="div_cityscape" style="display: none;">
         <div class="column">
